# Paradygmaty_programowania_PROJEKT_3

./: .gitignore  CMakeLists.txt  common.c  common.h  main.c
cars/: data.c  data.h  interface.c  interface.h
interface/: interface.c  interface.h
queue/: queue.c  queue.h
repairs/: data.c  data.h  interface.c  interface.h
test data/: instrukcja.txt  test_data_cars.data  test_data_repairs.data  test_data_workplaces.data
workplaces/: data.c  data.h  interface.c  interface.h
